peac_dev/force-app/main/default/objects/Gl_Code__c/Gl_Code__c.object-meta.xml
<CustomObject>
    <label>Gl Code</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Gl Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>