peac_dev/force-app/main/default/objects/Gl_Code__c/fields/GL_Name__c.field-meta.xml
<CustomField>
    <fullName>GL_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>