peac_dev/force-app/main/default/objects/Gl_Code__c/fields/Payment_Field_name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Field_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Field name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>