peac_dev/force-app/main/default/objects/Gl_Code__c/fields/Payment_Field_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Field_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Field Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>