peac_dev/force-app/main/default/objects/Gl_Code__c/fields/SL_Account__c.field-meta.xml
<CustomField>
    <fullName>SL_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SL Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>