peac_dev/force-app/main/default/objects/Gl_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Field_name__c</columns>
    <columns>Payment_Field_Source__c</columns>
    <columns>Type__c</columns>
    <columns>SL_Account__c</columns>
    <columns>GL_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>