peac_dev/force-app/main/default/objects/Gl_Code__c/listViews/Dynamics_SL_Codes.listView-meta.xml
<ListView>
    <fullName>Dynamics_SL_Codes</fullName>
    <columns>NAME</columns>
    <columns>Payment_Field_name__c</columns>
    <columns>Payment_Field_Source__c</columns>
    <columns>SL_Account__c</columns>
    <columns>GL_Name__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>Dynamics SL Codes</label>
</ListView>